--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color:#EFF3F7;
   height: 100%;
+  font-family: D2-font;
 }
-
+@font-face{
+  font-family: 'D2-font';
+  src:url(./font/D2Coding-Ver1.3-20171129.ttf)
+}
 html, #root{
   height:100%;
 }
