--- a/src/css/LoginModal.css
+++ b/src/css/LoginModal.css
@@ -1,4 +1,4 @@
-#loginModal{
+/* #loginModal{
     padding:50px;
     padding-top: 100px;
     display: -ms-flexbox;
@@ -7,4 +7,4 @@
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     font-size:14px;
-}
+} */
