--- a/src/css/LoginModal.css
+++ b/src/css/LoginModal.css
@@ -1,10 +1,4 @@
-/* #loginModal{
-    padding:50px;
+#LoginContainer{
+    position: relative;
     padding-top: 100px;
-    display: -ms-flexbox;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    font-size:14px;
-} */
+}
