--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -1,11 +1,4 @@
 #Signup{
-    padding:50px;
+    position: relative;
     padding-top: 100px;
-    display: -ms-flexbox;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    font-size:14px;
-    background-color: white;
 }
