--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,12 +1,20 @@
-.header {
+#logo {
+    background-image: url(../img/Logo.png);
+    background-size: 150%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 100px;
+  }
+/* .header {
     background: #3483D2;
-    display: table;
+    display: table; 
     table-layout: fixed;
     width: 100%;
     position:fixed; 
-    z-index:1;   
-}
-
+    z-index:1;    
+} 
+/*
+ 
 .item {
     text-align: center;
     padding-top: 1rem;
@@ -23,4 +31,4 @@
 .item:active, .item.active {
     background: white;
     color: #5c7cfa;
-}
+} */
