--- a/src/css/Introduce.css
+++ b/src/css/Introduce.css
@@ -1,10 +1,23 @@
-#SearchComponent{
-    padding:50px;
-    padding-top: 100px;
-    display: -ms-flexbox;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    font-size:14px;
+* { box-sizing: border-box; }
+.video-background {
+    background: #000;
+    position: fixed;
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: -99;
 }
+.video-foreground,
+.video-background iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+@media (min-aspect-ratio: 16/9) {
+.video-foreground { height: 300%; top: -100%; }
+}
+@media (max-aspect-ratio: 16/9) {
+.video-foreground { width: 300%; left: -100%; }
+}
+h1{ color:white;}
